cmd/pint/tests/0011_ignore_rules.txt
pint.error lint rules
! stdout .
cmp stderr stderr.txt

-- stderr.txt --
level=info msg="Loading configuration file" [36mpath=[0m.pint.hcl
level=info msg="File parsed" [36mpath=[0mrules/1.yaml [36mrules=[0m10
rules/1.yaml:5: syntax error: unexpected right parenthesis ')' (promql/syntax)
  expr: sum(errors_total) by )

rules/1.yaml:16: job label is required and should be preserved when aggregating "^.+$" rules, remove job from without() (promql/without)
  expr: sum(errors_total) without(job)

rules/1.yaml:22: syntax error: unexpected right parenthesis ')' (promql/syntax)
  expr: sum(errors_total) by )

rules/1.yaml:33: job label is required and should be preserved when aggregating "^.+$" rules, remove job from without() (promql/without)
  expr: sum(errors_total) without(job)

level=info msg="Problems found" [36mFatal=[0m2 [36mWarning=[0m2
level=fatal msg="Fatal error" [31merror=[0m[31m"problems found"[0m
-- rules/1.yaml --
- record: disabled
  expr: sum(errors_total) by ) # pint disable promql/syntax

- record: active
  expr: sum(errors_total) by )

- record: disabled
  # pint disable promql/without(job:true)
  expr: sum(errors_total) without(job)

- record: disabled
  # pint disable promql/without
  expr: sum(errors_total) without(job)

- record: active
  expr: sum(errors_total) without(job)

- alert: disabled
  expr: sum(errors_total) by ) # pint disable promql/syntax

- alert: active
  expr: sum(errors_total) by )

- alert: disabled
  # pint disable promql/without(job:true)
  expr: sum(errors_total) without(job)

- alert: disabled
  # pint disable promql/without
  expr: sum(errors_total) without(job)

- alert: active
  expr: sum(errors_total) without(job)

-- .pint.hcl --
rule {
    aggregate ".+" {
        keep = [ "job" ]
    }
}
